# Frida-MCP

./: .gitignore  README.md  pyproject.toml
frida_mcp/: __init__.py  device.py  memory.py  server.py
frida_mcp/agent/: agent.js
